--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -307,7 +307,7 @@
         </section>
     </section>
     <section class="pb110 position-relative" id="faqs">
-     
+
         <img src="./assets/images/flower-elipse.png" alt="flower-elipse" class="position-absolute bottom-0">
         <div class="container pt-lg-3 pt-0">
             <div class="text-center pt-lg-3 pt-0 ">
@@ -357,7 +357,6 @@
             </div>
         </div>
     </section>
-
     <section>
         <div class="container  mt-115">
             <div class="row">
@@ -440,89 +439,71 @@
             </div>
         </div>
     </section>
-    <footer class="bg-black">
+    <footer class="footer-bg bg-black">
         <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <img class="mt-55" src="assets/img/Frame 7.png" alt="">
-                    <p class=" fs-sm fw-400 ff-popins white">Lorem Ipsum has been the industry's standard dummy
-                        text<br>
-                        ever since the
-                        1500s, when an unknown printer took a galley<br> of
-                        type and scrambled it</p>
-                    <div class="cursor mt-24"><svg xmlns="http://www.w3.org/2000/svg" width="217" height="40"
-                            viewBox="0 0 217 40" fill="none">
-                            <circle cx="20" cy="20" r="20" fill="#444444" />
-                            <path
-                                d="M25.1481 21.4993L25.8225 17.156H21.6072V14.3375C21.6072 13.1495 22.1959 11.9908 24.0839 11.9908H26V8.29325C26 8.29325 24.2614 8 22.5987 8C19.1276 8 16.8587 10.0805 16.8587 13.8463V17.1567H13V21.5H16.8587V32H21.6072V21.5L25.1481 21.4993Z"
-                                fill="white" />
-                            <circle cx="138" cy="20" r="20" fill="#444444" />
-                            <path
-                                d="M146 14.663C145.375 14.9364 144.695 15.1331 143.994 15.2098C144.721 14.7716 145.266 14.0794 145.526 13.263C144.843 13.6747 144.095 13.9634 143.315 14.1163C142.989 13.763 142.595 13.4816 142.157 13.2896C141.719 13.0975 141.247 12.9989 140.77 13C138.839 13 137.287 14.5864 137.287 16.5331C137.287 16.8065 137.319 17.0799 137.372 17.3429C134.481 17.1897 131.903 15.7897 130.189 13.6462C129.877 14.1869 129.713 14.8027 129.715 15.4293C129.715 16.6553 130.33 17.7364 131.268 18.3722C130.715 18.3501 130.175 18.1962 129.693 17.9228V17.9663C129.693 19.6831 130.89 21.1059 132.485 21.4331C132.186 21.512 131.878 21.5524 131.568 21.5533C131.341 21.5533 131.127 21.5305 130.91 21.4994C131.352 22.8994 132.637 23.9163 134.167 23.9494C132.97 24.9 131.47 25.4592 129.842 25.4592C129.55 25.4592 129.28 25.4488 129 25.4157C130.545 26.4201 132.377 27 134.351 27C140.758 27 144.263 21.6195 144.263 16.9494C144.263 16.7962 144.263 16.6429 144.253 16.4897C144.931 15.9864 145.526 15.363 146 14.663Z"
-                                fill="white" />
-                            <circle cx="79" cy="20" r="20" fill="#444444" />
-                            <path
-                                d="M78.9982 16.4083C77.0107 16.4083 75.4066 18.0124 75.4066 20C75.4066 21.9876 77.0107 23.5917 78.9982 23.5917C80.9858 23.5917 82.5899 21.9876 82.5899 20C82.5899 18.0124 80.9858 16.4083 78.9982 16.4083ZM78.9982 22.3343C77.7129 22.3343 76.6639 21.2854 76.6639 20C76.6639 18.7146 77.7129 17.6657 78.9982 17.6657C80.2836 17.6657 81.3326 18.7146 81.3326 20C81.3326 21.2854 80.2836 22.3343 78.9982 22.3343ZM82.737 15.4242C82.273 15.4242 81.8982 15.7989 81.8982 16.263C81.8982 16.727 82.273 17.1018 82.737 17.1018C83.2011 17.1018 83.5758 16.7288 83.5758 16.263C83.576 16.1528 83.5544 16.0436 83.5123 15.9418C83.4702 15.84 83.4084 15.7475 83.3305 15.6695C83.2525 15.5916 83.16 15.5298 83.0582 15.4877C82.9564 15.4456 82.8472 15.424 82.737 15.4242ZM85.9995 20C85.9995 19.0333 86.0082 18.0754 85.9539 17.1105C85.8997 15.9898 85.644 14.9951 84.8244 14.1756C84.0031 13.3543 83.0102 13.1003 81.8895 13.0461C80.9228 12.9918 79.9649 13.0005 79 13.0005C78.0333 13.0005 77.0754 12.9918 76.1105 13.0461C74.9898 13.1003 73.9951 13.356 73.1756 14.1756C72.3543 14.9969 72.1003 15.9898 72.0461 17.1105C71.9918 18.0772 72.0005 19.0351 72.0005 20C72.0005 20.9649 71.9918 21.9246 72.0461 22.8895C72.1003 24.0102 72.356 25.0049 73.1756 25.8244C73.9969 26.6457 74.9898 26.8997 76.1105 26.9539C77.0772 27.0082 78.0351 26.9995 79 26.9995C79.9667 26.9995 80.9246 27.0082 81.8895 26.9539C83.0102 26.8997 84.0049 26.644 84.8244 25.8244C85.6457 25.0031 85.8997 24.0102 85.9539 22.8895C86.01 21.9246 85.9995 20.9667 85.9995 20ZM84.4584 24.1293C84.3306 24.448 84.1765 24.6862 83.9296 24.9313C83.6827 25.1782 83.4463 25.3324 83.1275 25.4602C82.2064 25.8262 80.0192 25.7439 78.9982 25.7439C77.9773 25.7439 75.7883 25.8262 74.8672 25.4619C74.5485 25.3341 74.3103 25.18 74.0652 24.9331C73.8182 24.6862 73.6641 24.4498 73.5363 24.131C73.1721 23.2082 73.2544 21.0209 73.2544 20C73.2544 18.9791 73.1721 16.7901 73.5363 15.869C73.6641 15.5502 73.8182 15.3121 74.0652 15.0669C74.3121 14.8218 74.5485 14.6659 74.8672 14.5381C75.7883 14.1738 77.9773 14.2561 78.9982 14.2561C80.0192 14.2561 82.2082 14.1738 83.1293 14.5381C83.448 14.6659 83.6862 14.82 83.9313 15.0669C84.1782 15.3138 84.3324 15.5502 84.4602 15.869C84.8244 16.7901 84.7421 18.9791 84.7421 20C84.7421 21.0209 84.8244 23.2082 84.4584 24.1293Z"
-                                fill="white" />
-                            <circle cx="197" cy="20" r="20" fill="#444444" />
-                            <path
-                                d="M197.051 14H197.14C197.962 14.0032 202.127 14.0352 203.25 14.3577C203.589 14.4561 203.899 14.6479 204.147 14.914C204.395 15.18 204.574 15.511 204.665 15.8738C204.766 16.2796 204.837 16.8166 204.885 17.3708L204.895 17.4818L204.917 17.7594L204.925 17.8705C204.99 18.8463 204.998 19.7603 204.999 19.96V20.04C204.998 20.2472 204.989 21.2231 204.917 22.2395L204.909 22.3516L204.9 22.4627C204.85 23.0734 204.776 23.6799 204.665 24.1262C204.574 24.4891 204.396 24.8203 204.147 25.0864C203.899 25.3525 203.59 25.5442 203.25 25.6423C202.09 25.9754 197.681 25.9989 197.07 26H196.928C196.619 26 195.341 25.9936 194.001 25.9445L193.831 25.9381L193.744 25.9338L193.573 25.9263L193.402 25.9189C192.292 25.8665 191.235 25.7822 190.748 25.6412C190.408 25.5432 190.099 25.3517 189.851 25.0858C189.602 24.8199 189.424 24.4889 189.333 24.1262C189.222 23.6809 189.148 23.0734 189.098 22.4627L189.09 22.3506L189.082 22.2395C189.033 21.516 189.005 20.791 189 20.0657V19.9343C189.002 19.7048 189.01 18.9115 189.064 18.0359L189.071 17.926L189.074 17.8705L189.082 17.7594L189.104 17.4818L189.114 17.3708C189.162 16.8166 189.233 16.2785 189.334 15.8738C189.425 15.5109 189.603 15.1797 189.852 14.9136C190.1 14.6475 190.409 14.4558 190.749 14.3577C191.236 14.2189 192.293 14.1335 193.403 14.0801L193.573 14.0726L193.745 14.0662L193.831 14.063L194.002 14.0555C194.954 14.0228 195.906 14.0047 196.858 14.0011H197.051V14ZM195.4 17.4274V22.5716L199.557 20.0005L195.4 17.4274Z"
-                                fill="white" />
-                        </svg></div>
-
+            <div class="row justify-content-between  pt-5">
+                <div class="col-xl-5">
+                    <img src="assets/img/Frame 7 (1).png" alt="loading">
+                    <p class="fs-sm fw-400 ff-poopins white mxw-480 pt-2">Lorem Ipsum has been the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it</p>
+                    <img src="assets/img/Group 69.png" alt="loading">
                 </div>
-                <div class="col-6">
-                    <div class="row justify-space">
-                        <div class="col-md-3 col-xs-6">
-                            <ul class="mt-80">
-                                <li><a class="fs-sm fw-600 ff-popins white" href="">home</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK1</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK2</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK3</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK4</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK5</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK5</a></li>
+                <div class="col-xl-6">
+                    <div class="row pt-4">
+                        <div class="col-xl-3 col-6  pl-15">
+                            <ul class="d-flex gap-2 flex-column ">
+                                <li class="fs-sm fw-600 ff-poppins white pb-3">Home</li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-3 col-xs-6">
-                            <ul class="mt-80">
-                                <li><a class="fs-sm fw-600 ff-popins white" href="">About us</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK1</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK2</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK3</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK4</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK5</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK6</a></li>
+                        <div class="col-xl-3 col-6 pl-15">
+                            <ul class="d-flex gap-2 flex-column ">
+                                <li class="fs-sm fw-600 ff-poppins white pb-3">About us</li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-3">
-                            <ul class="mt-80">
-                                <li><a class="fs-sm fw-600 ff-popins white" href="">Contact us</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK1</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK2</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK3</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK4</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LIN5K</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK6</a></li>
+                        <div class="col-xl-3 col-6 pl-15">
+                            <ul class="d-flex gap-2 flex-column ">
+                                <li class="fs-sm fw-600 ff-poppins white pb-3">Contact us </li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-3">
-                            <ul class="mt-80">
-                                <li><a class="fs-sm fw-600 ff-popins white" href="">Contact us</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK1</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK2</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK3</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK4</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LIN5K</a></li>
-                                <li class="fs-sm fw-400 ff-popins"><a class="white" href="">LINK6</a></li>
+                        <div class="col-xl-3 col-6 pl-15">
+                            <ul class="d-flex gap-2 flex-column ">
+                                <li class="fs-sm fw-600 ff-poppins white pb-3">Portfolio</li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
                             </ul>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
-        <div class="strkew white mt-60"></div>
-        <div class="fs-sm fw-400 ff-popins white text-center mt-42">Copyright © Deco Master , 2021.</div>
+        <div class="w-100 ">
+            <svg class="w-100" width="1920" height="2" viewBox="0 0 1920 2" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 1L1920 1.00017" stroke="white" />
+            </svg>
+
+        </div>
+        <P class="text-center white m-0 pb-4">Copyright © Deco Master , 2021.</P>
     </footer>
 
 
