--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -78,33 +78,31 @@
                 </svg>
             </div>
             <div class="row pt-5">
-                <div
-                    class="col-xl-4 col-lg-6 col-sm-12 border-B border-R border-b-sm border-r-sm border-bottom-1  border-right">
+                <div class="col-xl-4 col-lg-6 col-sm-12  border-bottom-1  border-right">
                     <div class="d-flex flex-column align-items-center ">
                         <img src="assets/img/faux 1.png" alt="loading">
                         <p class="fs-md ff-poppins black fw-500 pt-4">Faux Finishes</p>
                     </div>
                 </div>
-                <div
-                    class="col-xl-4 col-lg-6 col-sm-12 border-B border-R border-r border-B-lg border-b-sm border-bottom-1  border-right ">
+                <div class="col-xl-4 col-lg-6 col-sm-12 border-bottom-1  border-right ">
                     <div class="d-flex flex-column align-items-center ">
                         <img src="assets/img/water-proofing 1.png" alt="loading">
                         <p class="fs-md ff-poppins black fw-500 pt-4">Water Proofing</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-sm-12 border-B border-R-lg border-r-sm border-b-sm  border-bottom-1 ">
+                <div class="col-xl-4 col-lg-6 col-sm-12 border-bottom-1 ">
                     <div class="d-flex flex-column align-items-center ">
                         <img src="assets/img/pre-paint 1.png" alt="loading">
                         <p class="fs-md ff-poppins black fw-500 pt-4">Pre-Paint Demo</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-sm-12  border-R  border-B-lg border-r border-b-sm border-right ">
+                <div class="col-xl-4 col-lg-6 col-sm-12  border-right ">
                     <div class="d-flex flex-column align-items-center ">
                         <img src="assets/img/removeal 1.png" alt="loading">
                         <p class="fs-md ff-poppins black fw-500 pt-4">Mildew Removal</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-sm-12  border-R border-r-sm border-right">
+                <div class="col-xl-4 col-lg-6 col-sm-12  border-right">
                     <div class="d-flex flex-column align-items-center ">
                         <img src="assets/img/color-proof 1.png" alt="loading">
                         <p class="fs-md ff-poppins black fw-500 pt-4">Color Proof</p>
@@ -151,7 +149,7 @@
         </div>
 
         <section>
-            <div class="grid-box ">
+            <div class="grid-box">
                 <div class="grid-item grid-item1 position-relative "><img src="./assets/img/image 13.png" alt="image1"
                         class="w-100">
                     <div
@@ -527,8 +525,8 @@
                     </div>
                 </div>
             </section>
-            <section class="py-5 position-relative" id="how-it-works">
-                <h2 class="fs-lg fw-700 ff-poppins text-center pt-5 ">Our Services</h2>
+            <section class="py-5 position-relative">
+                <h2 class="fs-lg fw-700 ff-poopins text-center pt-5 ">Our Services</h2>
                 <div class="text-center pt-3 pb-sm-6 pb-0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="36" height="10" viewBox="0 0 36 10" fill="none">
                         <circle cx="5" cy="5" r="5" fill="url(#paint0_linear_2_10571)" />
@@ -562,15 +560,15 @@
 
                         <div class="col-lg-5 col-12 px-5 d-flex flex-column justify-content-end p-5 ">
                             <div class="d-flex  mt-4">
-                                <h3 class="fs-1lg fw-700 ff-poppins blue">01.</h3>
-                                <h5 class="fs-lg fw-500 ff-poppins black pt-3">Residential Projects</h5>
+                                <h3 class="fs-1lg fw-700 ff-poopins blue">01.</h3>
+                                <h5 class="fs-lg fw-500 ff-poopins black pt-3">Residential Projects</h5>
                             </div>
-                            <p class="fs-sm fw-400 ff-poppins color-black opacity-75 max-471 pt-3">Lorem Ipsum is simply
+                            <p class="fs-sm fw-400 ff-poopins color-black opacity-75 max-471 pt-3">Lorem Ipsum is simply
                                 dummy text of
                                 the printing
                                 and typesetting industry. Lorem Ipsum has
                                 been the industry's standard </p>
-                            <button class="fs-sm fw-400 ff-poppins  mt-3 mb-3 bt1">Read More</button>
+                            <button class="fs-sm fw-400 ff-poopins  mt-3 mb-3 bt1">Read More</button>
 
                         </div>
                         <div class="col-lg-6 col-12 pb-5">
@@ -592,15 +590,15 @@
                         </div>
                         <div class="col-lg-5 col-12 px-5 d-flex flex-column justify-content-end p-5 ">
                             <div class="d-flex  mt-4">
-                                <h3 class="fs-1lg fw-700 ff-poppins color-blue">02.</h3>
-                                <h5 class="fs-lg fw-500 ff-poppins color-black pt-3">Restoration Projects</h5>
+                                <h3 class="fs-1lg fw-700 ff-poopins blue">02.</h3>
+                                <h5 class="fs-lg fw-500 ff-poopins black pt-3">Restoration Projects</h5>
                             </div>
-                            <p class="fs-sm fw-400 ff-poppins color-black opacity-75 max-471 pt-3">Lorem Ipsum is simply
+                            <p class="fs-sm fw-400 ff-poopins color-black opacity-75 max-471 pt-3">Lorem Ipsum is simply
                                 dummy text of
                                 the printing
                                 and typesetting industry. Lorem Ipsum has
                                 been the industry's standard </p>
-                            <button class="fs-sm fw-400 ff-poppins color-white bt1 mt-3 mb-3 ">Read More</button>
+                            <button class="fs-sm fw-400 ff-poopins white bt1 mt-3 mb-3 ">Read More</button>
                         </div>
                         <span
                             class="max-1774 position-absolute z-n1 end-0 color-grey-1 rounded-5 rounded-start w-100"></span>
@@ -614,15 +612,15 @@
                     <div class="row position-relative ">
                         <div class="col-lg-5 col-12 px-5 d-flex flex-column justify-content-end p-5 ">
                             <div class="d-flex  mt-4">
-                                <h3 class="fs-1lg fw-700 ff-poppins color-blue">03.</h3>
-                                <h5 class="fs-lg fw-500 ff-poppins color-black pt-3">Commercial Projects</h5>
+                                <h3 class="fs-1lg fw-700 ff-poopins blue">03.</h3>
+                                <h5 class="fs-lg fw-500 ff-poopins black pt-3">Commercial Projects</h5>
                             </div>
-                            <p class="fs-sm fw-400 ff-poppins color-black opacity-75 max-471 pt-3">Lorem Ipsum is simply
+                            <p class="fs-sm fw-400 ff-poopins black opacity-75 max-471 pt-3">Lorem Ipsum is simply
                                 dummy text of
                                 the printing
                                 and typesetting industry. Lorem Ipsum has
                                 been the industry's standard </p>
-                            <button class="fs-sm fw-400 ff-poppins color-white bt1  mt-3 mb-3 ">Read More</button>
+                            <button class="fs-sm fw-400  ff-poopins bt1  mt-3 mb-3 ">Read More</button>
                         </div>
                         <div class="col-lg-6 col-12 pb-5">
                             <img src="/assets/img/paint2.png" alt="image1" class="w-100">
@@ -736,30 +734,30 @@
     </section>
     <section class="bg-blue py-4  position-relative z-2 pb-5 h-800 mb-5">
         <img src="." alt="painting" class="position-absolute right-0 bottom-0 z-n1">
-        <h2 class="fs-1lg fw-700 ff-poppins white text-center pb-4 pt-4">Our Team</h2>
+        <h2 class="fs-1lg fw-700 ff-poopins white text-center pb-4 pt-4">Our Team</h2>
         <div class="container position-relative">
             <div class="row gap-70">
                 <div class="col-lg-4 col-sm-6 col-12 mb-3 mb-sm-0 ">
                     <img src="./assets/img/Rectangle 25.png" alt="image" class="w-100">
-                    <p class="fs-sm fw-500 white text-center ff-poppins m-0">Team Lead</p>
-                    <p class="fs-md fw-700 white text-center ff-poppins">Frank Woods</p>
+                    <p class="fs-sm fw-500 white text-center ff-poopins m-0">Team Lead</p>
+                    <p class="fs-md fw-700 white text-center ff-poopins">Frank Woods</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-12 mb-3 mb-sm-0">
                     <img src="/assets/img/Rectangle 28.png" alt="image" class="w-100">
-                    <p class="fs-sm fw-500 white text-center ff-poppins m-0">Manager</p>
-                    <p class="fs-md fw-700 white text-center ff-poppins">John William</p>
+                    <p class="fs-sm fw-500 white text-center ff-poopins m-0">Manager</p>
+                    <p class="fs-md fw-700 white text-center ff-poopins">John William</p>
                 </div>
             </div>
             <div class="row justify-content-lg-end gap-150 absolute-row">
                 <div class="col-lg-4 col-sm-6 col-12 mb-3 mb-sm-0">
                     <img src="./assets/img/Rectangle 27.png" alt="image" class="w-100">
-                    <p class="fs-sm fw-500 white text-center ff-poppins m-0">Accounts</p>
-                    <p class="fs-md fw-700 white text-center ff-poppins">Michale John</p>
+                    <p class="fs-sm fw-500 white text-center ff-poopins m-0">Accounts</p>
+                    <p class="fs-md fw-700 white text-center ff-poopins">Michale John</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-12 ">
                     <img src="./assets/img/Rectangle 28.png" alt="image" class="w-100">
-                    <p class="fs-sm fw-500 white text-center ff-poppins m-0">CEO</p>
-                    <p class="fs-md fw-700 white text-center ff-poppins">Thomacolor-white</p>
+                    <p class="fs-sm fw-500 white text-center ff-poopins m-0">CEO</p>
+                    <p class="fs-md fw-700 white text-center ff-poopins">Thomacolor-white</p>
                 </div>
             </div>
         </div>
@@ -878,32 +876,32 @@
                         </div>
                         <div class="col-xl-3 col-6 pl-15">
                             <ul class="d-flex gap-2 flex-column ">
-                                <li class="fs-sm fw-600 ff-poppins white pb-3">About us</li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li class="fs-sm fw-600 ff-poopins white pb-3">About us</li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
                             </ul>
                         </div>
                         <div class="col-xl-3 col-6 pl-15">
                             <ul class="d-flex gap-2 flex-column ">
-                                <li class="fs-sm fw-600 ff-poppins white pb-3">Contact us </li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li class="fs-sm fw-600 ff-poopins white pb-3">Contact us </li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
                             </ul>
                         </div>
                         <div class="col-xl-3 col-6 pl-15">
                             <ul class="d-flex gap-2 flex-column ">
-                                <li class="fs-sm fw-600 ff-poppins white pb-3">Portfolio</li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
-                                <li> <a href="" class="fs-sm fw-400 ff-poppins white ">LINK1</a></li>
+                                <li class="fs-sm fw-600 ff-poopins white pb-3">Portfolio</li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
+                                <li> <a href="" class="fs-sm fw-400 ff-poopins white ">LINK1</a></li>
                             </ul>
                         </div>
 
