--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -147,9 +147,7 @@
                 </defs>
             </svg>
         </div>
-
-        <section>
-            <div class="grid-box">
+            <div class="grid-box pt-40">
                 <div class="grid-item grid-item1 position-relative "><img src="./assets/img/image 13.png" alt="image1"
                         class="w-100">
                     <div
@@ -733,7 +731,7 @@
         </div>
     </section>
     <section class="bg-blue py-4  position-relative z-2 pb-5 h-800 mb-5">
-        <img src="." alt="painting" class="position-absolute right-0 bottom-0 z-n1">
+        <img src="./assets/img/cornwr.ellips.png" alt="painting" class="position-absolute right-0 bottom-0 z-n1">
         <h2 class="fs-1lg fw-700 ff-poopins white text-center pb-4 pt-4">Our Team</h2>
         <div class="container position-relative">
             <div class="row gap-70">
@@ -837,7 +835,7 @@
         <div class="container pt-5">
             <div class="last-box d-flex flex-column justify-content-center gap-4 ps-4 px-4">
                 <div class="d-flex flex-column align-items-center">
-                    <h5 class="ff-poppins fs-2lg fw-700 news-text max-915 text-center m-0 pt-5 mt-5 translate-x">
+                    <h5 class="ff-poppins fs-2lg fw-700 news-text max-915 text-center translate-x">
                         NEWSLETTER</h5>
                 </div>
                 <div
